# insighit_capture

./: .gitignore  CMakeLists.txt  README.md  cognex2cv.py  ctype_test.py  insight_capture.py  insight_native_client.py
data/: analysis.txt  cross_image.txt  log.txt  raw_image.txt
insight_capture/: package.xml  setup.cfg  setup.py
insight_capture/insight_capture/: insight_capture.py  insight_capture_node.py  insight_native_client.py
insight_capture/launch/: default.launch.py
insight_capture_cpp_lib/: CMakeLists.txt  package.xml
insight_capture_cpp_lib/src/: insight_capture_cpp_lib.cpp
src/: insight_capture.cpp  insight_capture.h  test_lib.cpp
